Added popup for single product view. Removed built files

--- a/tg-product-list-client/package.json
+++ b/tg-product-list-client/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "watch": "vite build --watch"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -38,6 +39,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.8"
   }
 }
