--- a/tg-product-list-client/package.json
+++ b/tg-product-list-client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "compression": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
